--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
+    "@mui/x-date-pickers": "^6.19.0",
+    "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
